cloud-apps/schedule-api-adapter/src/k8s/deployment-2022.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-adapter-2022
  namespace: schedule-api-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-adapter-2022
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-adapter-2022
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: schedule-api-adapter
          image: ghcr.io/dannixon/emfcamp-schedule-api-adapter:a046765c3d309b98e4c017896598b8899f434e5a
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: http-2022
  namespace: schedule-api-adapter
spec:
  selector:
    app.kubernetes.io/name: api-adapter-2022
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
