cloud-apps/schedule-api-adapter/src/k8s/deployment-2024.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-adapter-2024
  namespace: schedule-api-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-adapter-2024
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-adapter-2024
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: schedule-api-adapter
          image: ghcr.io/dannixon/emfcamp-schedule-api-adapter:e90cec9dc0414183658eb915ec60442e119b820b
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: http-2024
  namespace: schedule-api-adapter
spec:
  selector:
    app.kubernetes.io/name: api-adapter-2024
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
