cloud-apps/schedule-api-adapter/src/k8s/ingress-2022.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-2022
  namespace: schedule-api-adapter
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`2022.schedule.emfcamp.dan-nixon.com`)
      services:
        - Kind: Service
          name: http-2022
          port: 8000
  tls:
    secretName: tls-cert
