cloud-apps/schedule-api-adapter/src/k8s/ingress-2024.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: schedule-api-adapter
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`schedule.emfcamp.dan-nixon.com`)
      services:
        - Kind: Service
          name: http-2024
          port: 8000
  tls:
    secretName: tls-cert

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-2024
  namespace: schedule-api-adapter
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`2024.schedule.emfcamp.dan-nixon.com`)
      services:
        - Kind: Service
          name: http-2024
          port: 8000
  tls:
    secretName: tls-cert
